--- a/index.html
+++ b/index.html
@@ -3,28 +3,30 @@
 <head>
 	<title>Drums Machine</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="script.js"></script>
 </head>
 
 <body>
 	<h1>My Drums Machine</h1>
 	<div class="container" id="drum-machine">
 		<div id="number-pad">
-			<div class="drum-pad" id=""><button>Q</button></div>
-			<div class="drum-pad" id=""><button>W</button></div>
-			<div class="drum-pad" id=""><button>E</button></div>
-			<div class="drum-pad" id=""><button>A</button></div>
-			<div class="drum-pad" id=""><button>S</button></div>
-			<div class="drum-pad" id=""><button>D</button></div>
-			<div class="drum-pad" id=""><button>Z</button></div>
-			<div class="drum-pad" id=""><button>X</button></div>
-			<div class="drum-pad" id=""><button>C</button></div>
+			<div class="drum-pad"><button>Q<audio src='https://s3.amazonaws.com/freecodecamp/drums/Heater-1.mp3' id="Q" class="clip" name="hi-hat" ></audio></button></div>
+			<div class="drum-pad" id="W"><button>W</button></div>
+			<div class="drum-pad" id="E"><button>E</button></div>
+			<div class="drum-pad" id="A"><button>A</button></div>
+			<div class="drum-pad" id="S"><button>S</button></div>
+			<div class="drum-pad" id="D"><button>D</button></div>
+			<div class="drum-pad" id="Z"><button>Z</button></div>
+			<div class="drum-pad" id="X"><button>X</button></div>
+			<div class="drum-pad" id="C"><button>C</button></div>
 		</div><!--end of number-pad-->
 
 		<div id="controls">
 			<div class="power">
 				<h3>Power</h3>
 				<label class="switch" id="power">
-	  				<input type="checkbox">
+	  				<input type="checkbox" id="powercheck"  checked="true">
 	  					<span class="slider round"></span>
 				</label>
 			</div>
@@ -35,13 +37,13 @@
 
 			<div class="volume">
 				<h3>Volume</h3>
-				<input type="range" id ="volume">
+				<input type="range" id ="volume" value="100">
 			</div>
 
 			<div class="bank">
 				<h3>Bank</h3>
 				<label class="switch" id="bank">
-	  				<input type="checkbox">
+	  				<input type="checkbox" id="bankcheck">
 	  					<span class="slider round"></span>
 				</label>
 			</div>
